--- a/Initial Commit/Style.css
+++ b/Initial Commit/Style.css
@@ -1,11 +1,11 @@
 html {
-    font-size: 62.5%;
+    font-size: 62.6%;
 }
 
 :root {
     --color-primary: #2584ff;
     --color-secondary: #00d9ff;
-    --color-accent:#ff3400;
+    --color-accent: Red;
     --color-headings:#1b0760;
     --color-body:#918ca4;
 
