--- a/Initial Commit/normalize.css
+++ b/Initial Commit/normalize.css
@@ -5,11 +5,11 @@
 
 /**
  * 1. Correct the line height in all browsers.
- * 2. Prevent adjustments of font size after orientation changes in iOS.
+ * ..2. Prevent adjustments of font size after orientation changes in iOS..
  */
 
 html {
-  line-height: 1.15; /* 1 */
+  line-height: 1.14; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
 }
 
