--- a/Initial Commit/Style.css
+++ b/Initial Commit/Style.css
@@ -5,7 +5,7 @@ html {
 :root {
     --color-primary: #2584ff;
     --color-secondary: #00d9ff;
-    --color-accent: Brown;
+    --color-accent: Red;
     --color-headings:#1b0760;
     --color-body:#918ca4;
 
