--- a/Initial Commit/Style.css
+++ b/Initial Commit/Style.css
@@ -1,3 +1,5 @@
+/* Topography */
+
 html {
     font-size: 62.5%;
 }
@@ -43,6 +45,9 @@ p{
 }
 
 @media screen and (min-width: 1024px) {
+
+
+
     body {
         font-size: 1.8rem;
     }
@@ -60,4 +65,32 @@ p{
     h3 {
         font-size: 2.4rem;
     }
+}
+A {
+    text-decoration: none;
+}
+/* Links */
+.link-arrow {
+    color:var (--color-accent);
+    text-transform: uppercase;
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+.link-arrow::after {
+    content: '-->';
+    margin-left: 5PX;
+    transition: margin 0.15s;
+}
+
+.link-arrow:hover::after{
+    margin-left: 10px;
+}
+
+
+@media  screen and (min-width: 1024px) {
+    .link-arrow {
+        font-size: 1.5rem;
+    }
+    
 }
