--- a/Initial Commit/Style.css
+++ b/Initial Commit/Style.css
@@ -128,3 +128,38 @@ A {
     font-size: 1.2rem;
 }
 }
+
+
+/* List */
+.list {
+    list-style: none;
+    padding-left: 0;
+    color: var(--color-headings);
+}
+
+.list--inline .list__item {
+    display: inline-block;
+    margin-right: 2rem;
+}
+
+.list--tick {}
+
+/* ICONS */
+.icon {
+    width:40px;
+    height: 40px;
+}
+
+.icon--primary {
+    fill: var(--color-primary);
+}
+
+.icon-container {
+    background: #f3f9fa;
+    width: 64px;
+    height: 64px;
+    border-radius: 100%;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+}
