--- a/Initial Commit/Style.css
+++ b/Initial Commit/Style.css
@@ -1,3 +1,10 @@
+
+/* Rule Using universa selector */
+*, *::after, *::before {
+    box-sizing: border-box;
+}
+
+
 /* Topography */
 
 html {
@@ -162,4 +169,57 @@ A {
     display: inline-flex;
     justify-content: center;
     align-items: center;
+}
+
+/* Button */
+.btn {
+    border-radius: 40px;
+    border: 0;
+    cursor: pointer;
+    font-size: 1.8rem;
+    font-weight: 600;
+    margin: 1rem 0;
+    padding: 2rem 3rem;
+    text-align:center;
+    text-transform: uppercase;
+    white-space: nowrap;
+}
+.btn--primary:hover {
+    background: #3a8ffd;
+    /* lighten(primary, 10%) */
+}
+.btn--primary {
+    background: var(--color-primary);
+    color:#fff
+
+}
+
+.btn--secondary {
+    background: var(--color-secondary);
+    color: #fff;
+}
+
+.btn--secondary:hover {
+    background-color: #00c8eb;
+}
+
+.btn--accent {
+    background-color: var(--color-accent) ;
+    color: #fff;
+    
+}
+
+.btn--accent:hover {
+    background: #ec3000;
+    
+}
+
+.btn--block {
+    width: 100%;
+    display: inline-block;
+}
+
+@media screen and (min-width:1024px) 
+    .btn {
+        font-size: 1.5rem;
 }
