--- a/Initial Commit/Style.css
+++ b/Initial Commit/Style.css
@@ -126,12 +126,14 @@ A {
 
 .badge--small  {
     font-size: 1.6rem;
+    padding: 0.5rem 1.5rem;
 }
 
 
 @media screen and (min-width: 1024px) {
     .badge {
         font-size: 1.5rem;
+        
     }
 .badge--small {
     font-size: 1.2rem;
@@ -140,18 +142,32 @@ A {
 
 
 /* List */
-.list {
-    color: var(--color-headings);
+.list--tick {
     list-style: none;
-    padding-left: 0;
+    padding: 0.5;
+    color: #2584ff;
+    font-size: 2rem;
+  }
+  
+  .list--tick .list__item {
+    position: relative;
+    padding-left: 25px;
+    margin-bottom: 8px;
+  }
+  
+  .list--tick .list__item::before {
+    content: "  ✔";
+    position: absolute;
+    left: 0;
+    color: green;
+    font-size: 16px;
+    padding: 0rem;
+    
+  }
+.plan .list__item {
+    margin-bottom: 2rem;
 }
 
-.list--inline .list__item {
-    display: inline-block;
-    margin-right: 2rem;
-}
-
-.list--tick {}
 
 /* ICONS */
 .icon {
@@ -285,4 +301,55 @@ A {
 .card--secondary .card__header{
     background: var(--color-secondary);
     color: white; 
+}
+
+/* Plans */
+.plan__name {
+    color: #fff;
+    margin: 0;
+    font-weight: 500;
+    font-size: 2.4rem;
+}
+
+
+
+.plan__price {
+    font-size: 6rem;
+}
+
+.plan__billing-cycle {
+    font-size: 2.4rem;
+    font-weight: 300;
+    opacity: 0.8;
+    margin-right: 1rem;
+}
+
+.card--secondary .badge--secondary {
+    background: #02cdf1;
+}
+
+.plan__description {
+    font-size: 2rem;
+    font-weight: 300;
+    letter-spacing: 1px;
+    display: block;
+    
+}
+
+@media screen and (min-width: 1024) {
+    .plan__name {
+        font-size: 1.4rem;
+    }
+    .plan__price {
+        font-size: 5rem;
+    }
+
+    .plan__billing-cycle {
+        font-size: 1.6rem;
+    }
+
+    .plan__description {
+        font-size: 1.7rem;
+    }
+    
 }
