--- a/Initial Commit/Style.css
+++ b/Initial Commit/Style.css
@@ -365,3 +365,20 @@ A {
     }
     
 }
+
+/* Media */
+.media {
+    display: flex;
+}
+
+.media__title {
+    margin: 0;
+}
+
+.media__body {
+    margin: 0 2rem;
+}
+
+.media__image {
+    margin-top: 1rem;
+}
