--- a/Initial Commit/Style.css
+++ b/Initial Commit/Style.css
@@ -431,3 +431,19 @@ A {
         font-size: 6rem;
     }
 }
+
+.grid {
+    display: grid;
+}
+
+@media screen and (min-width: 768px) {
+    .grid--1x2 {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .grid--1x3 {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
