--- a/Initial Commit/Style.css
+++ b/Initial Commit/Style.css
@@ -175,10 +175,18 @@ A {
     height: 40px;
     width:40px;
 }
+.icon--small {
+    width: 30px;
+    height: 30px;
+}
 
 .icon--primary {
     fill: var(--color-primary);
 }
+
+.icon--white {
+    fill: #fff;
+} 
 
 .icon-container {
     align-items: center;
@@ -190,6 +198,9 @@ A {
     width: 64px;
 }
 
+.icon-container--accent {
+    background: var(--color-accent);
+}
 /* Button */
 .btn {
     border-radius: 40px;
@@ -445,5 +456,33 @@ A {
 @media screen and (min-width: 1024px) {
     .grid--1x3 {
         grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+/* Testimonial */
+.testimonial {
+    padding: 3rem;
+
+}
+.testimonial__image {
+    position: relative;
+}
+.testimonial__image > img {
+    width: 100%;
+}
+
+.testimonial__image > .icon-container {
+    position: absolute;
+    top: 3rem;
+    right: -32px;
+}
+
+@media screen and (min-width: 768px) {
+    .testimonial .quote, 
+    .testimonial .quote__author {
+        font-size: 2.4rem;
+    }
+    .testimonial .quote {
+        margin-left: 6rem;
     }
 }
