Added Domain Block

--- a/Initial Commit/Component/icon.html
+++ b/Initial Commit/Component/icon.html
@@ -1,3 +1,7 @@
 <span class="icon-container"
   ><img class="icon icon--primary" src="Images/computer.svg" alt=""
 /></span>
+
+<div class="icon icon--white collapsible__chevron">
+  <img src="Images/chevron.svg" alt="" />
+</div>
