--- a/Initial Commit/Style.css
+++ b/Initial Commit/Style.css
@@ -210,6 +210,7 @@ A {
     font-size: 1.8rem;
     font-weight: 600;
     margin: 1rem 0;
+    outline: 0;
     padding: 2rem 3rem;
     text-align:center;
     text-transform: uppercase;
@@ -218,6 +219,14 @@ A {
 .btn--primary:hover {
     background: #3a8ffd;
     /* lighten(primary, 10%) */
+}
+
+
+.btn .icon {
+    width: 2rem;
+    height: 2rem;
+    margin-right: 1rem;
+    vertical-align: middle;
 }
 .btn--primary {
     background: var(--color-primary);
@@ -283,7 +292,7 @@ A {
 .input-group .input {
     border: 0;
     flex-grow: 1;
-    padding: 1.5rem 1rem;
+    padding: 1.5rem 2rem;
 }
 
 .input-group .btn {
@@ -698,6 +707,35 @@ callout__heading {
     .hero__content {
         text-align: left;
         align-self: center;
+        list-style: none;
+    }
+    
+}
+
+.block-domain .input-group{
+    box-shadow: 0 0 30px 20px #e6ebee;
+    border: 0;
+    margin: 4rem auto;
+    max-width: 670;
+
+}
+
+.block-domain__prices {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 6fr) ;
+    list-style: none; 
+    font-size: 2rem;
+    font-weight: 600;
+    justify-items: center;
+    max-width: 700px;
+    margin: 0 auto;
+}
+
+
+@media screen and (min-width: 768px) {
+    .block-domain__prices {
+        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     }
     
 }
