--- a/Initial Commit/Style.css
+++ b/Initial Commit/Style.css
@@ -757,11 +757,38 @@ callout__heading {
 
 /* PLANS BLOCK */
 .block-plans .grid {
-    gap:8rem 4rem;
+    gap:8rem 4rem 2rem;
 }
 
 .block-plans .card {
     max-width: 500px;
     margin: 0 auto;
+}
+
+
+
+/* FEATURES */
+.feature {
+    gap: 4rem 2rem;
+    margin: 12rem 0;
+
+}
+
+.feature:first-of-type {
+    margin-top: 6rem;
+}
+.feature__heading {
+    margin: 1rem 0;
+}
+
+.feature__image {
+    width: 100%;
+}
+
+@media screen and (min-width:768) {
+    .feature:nth-of-type(even) .feature__content {
+        order: 2;
+    }
+    
 }
 
