--- a/Initial Commit/Style.css
+++ b/Initial Commit/Style.css
@@ -48,7 +48,7 @@ h2 {
 
 h3 {
     font-size: 3rem;
-    margin-bottom: 1rem;
+    font-weight: 500;
 }
 
 p{
@@ -144,10 +144,16 @@ A {
 
 
 /* List */
+.list {
+    list-style: none;
+    padding-left: 0;
+
+}
 .list--tick {
     list-style: none;
     padding: 0.5;
-    color: #2584ff;
+    color: #126de4;
+    /* color: var(--color-headings); */
     font-size: 2rem;
   }
   
@@ -410,6 +416,7 @@ A {
 /* Media */
 .media {
     display: flex;
+    margin-bottom: 4rem;
 }
 
 .media__title {
@@ -599,6 +606,7 @@ callout__heading {
 
 .block__header {
     text-align: center;
+    margin-bottom: 4rem;
 }
 
 
@@ -610,20 +618,22 @@ callout__heading {
     background: #000;
     color: #7b858b;
 }
-.block--dark .block__heading {
+.block--dark h1,
+.block--dark h2,
+.block--dark h3 {
     color: #fff;
 }
 
 .block--skewed-right {
     --padding-vertical: 6rem;
     padding: calc(var(--padding-vertical) + 4rem);
-    clip-path: polygon(0% 0, 100% 0, 100% 100%, 0 80%);
+    clip-path: polygon(0% 0, 100% 0, 100% 100%, 0 90%);
 }
 
 .block--skewed-left {
     --padding-vertical: 6rem;
     padding: calc(var(--padding-vertical) + 4rem);
-    clip-path: polygon(0% 0, 100% 0, 100% 80%, 0 100%);
+    clip-path: polygon(0% 0, 100% 0, 100% 90%, 0 100%);
 }
 
 
@@ -698,9 +708,6 @@ callout__heading {
 
 
 /* HERO */
-.hero {
-    clip-path: polygon(0% 0, 100% 0, 100% 80%, 0 100%);
-}
 
 .hero__tagline {
     font-size: 2rem;
@@ -792,3 +799,24 @@ callout__heading {
     
 }
 
+/* SHOWCASE BLOCK */
+.block-showcase__image >img{
+    width: 100%;
+}
+
+.block-showcase__image >img {
+    width: auto;
+    max-width: 700px;
+}
+
+@media screen and (min-width:768px) {
+    .block-showcase .grid {
+        grid-template-columns: 50% 50%;
+    }
+    .block-showcase__image {
+
+        justify-self: end;
+    }
+
+    
+}  
