Added MODIFIED Footer Element

--- a/Initial Commit/Component/Collapsible.html
+++ b/Initial Commit/Component/Collapsible.html
@@ -1,6 +1,6 @@
 <div class="collapsible collapsible--expanded">
   <header class="collapsible__header">
-    <h2 collapsible__heading>Item 1</h2>
+    <h2 class="collapsible__heading">Item 1</h2>
 
     <div class="icon icon--white collapsible__chevron">
       <img src="Images/chevron.svg" alt="" />
@@ -9,20 +9,5 @@
   <div class="collapsible__content">
     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio, atque aut
     deserunt, necessitatibu.
-  </div>
-  <div class="collapsible collapsible--expanded">
-    <header class="collapsible__header">
-      <h2 collapsible__heading>Item 1</h2>
-
-      <div class="icon icon--white collapsible__chevron">
-        <img src="Images/chevron.svg" alt="" />
-      </div>
-    </header>
-    <div class="collapsible__content">
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio, atque aut
-      deserunt, necessitatibu.
-    </div>
-
-    <script src="Images/main.js"></script>
   </div>
 </div>
