Mush Initial Complete Website

--- a/Initial Commit/Component/Footer.html
+++ b/Initial Commit/Component/Footer.html
@@ -7,6 +7,7 @@
         <div class="icon icon--white collapsible__chevron">
           <img src="Images/chevron.svg" alt="" />
         </div>
+        <link rel="stylesheet" href="../Style.css" />
       </header>
       <div class="collapsible__content">
         <ul class="list">
