--- a/Initial Commit/Style.css
+++ b/Initial Commit/Style.css
@@ -214,15 +214,22 @@ A {
     border-radius: 40px;
     border: 0;
     cursor: pointer;
-    font-size: 1.8rem;
-    font-weight: 600;
+    font-size: 1rem;
+    font-weight: 200;
     margin: 1rem 0;
     outline: 0;
-    padding: 2rem 4vw;
+    padding: 1rem 1vw;
     text-align:center;
     text-transform: uppercase;
     white-space: nowrap;
 }
+
+.btn--black:hover {
+    background: #000;
+    /* lighten(primary, 10%) */
+}
+
+
 .btn--primary:hover {
     background: #3a8ffd;
     /* lighten(primary, 10%) */
@@ -841,7 +848,7 @@ callout__heading {
 
 }
 
-,footer__brand {
+footer__brand {
     margin-top: 5rem;
     text-align: center;
     /* font-weight: 100; */
@@ -895,4 +902,13 @@ callout__heading {
     .footer__heading {
         font-size: 1.6rem;
     }
+}
+
+.Pic {
+    float: left;
+    width: 40%;
+    border-radius: 40%;
+    margin-right: 20px;
+
+
 }
