--- a/Initial Commit/Style.css
+++ b/Initial Commit/Style.css
@@ -11,6 +11,10 @@ html {
     font-size: 62.5%;
 }
 
+img {
+    width: 100%;
+  }
+
 :root {
     --color-primary: #2584ff;
     --color-secondary: #00d9ff;
@@ -49,6 +53,7 @@ h2 {
 h3 {
     font-size: 3rem;
     font-weight: 500;
+    line-height: 1.3;
 }
 
 p{
@@ -56,8 +61,6 @@ p{
 }
 
 @media screen and (min-width: 1024px) {
-
-
 
     body {
         font-size: 1.8rem;
