--- a/Initial Commit/Component/Plans_Block.html
+++ b/Initial Commit/Component/Plans_Block.html
@@ -1,4 +1,13 @@
-<section class="block container block-plans">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <section class="block container block-plans">
     <div class="grid grid--1x3">
       <div>
         <div class="plan">
@@ -69,3 +78,5 @@
     </div>
   </section>
 </body>  
+</body>
+</html>
